Surefire plugin update.